force-app/main/default/objects/cnx__Connects_Configuration__c/cnx__Connects_Configuration__c.object-meta.xml
<CustomObject>
    <description>b+s Connects for Salesforce configuration. Check https://docs.bucher-suter.com/salesforce-integration for more information.</description>
    <label>b+s Configuration</label>
    <nameField>
        <label>b+s Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>b+s Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>