force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Additional_Search_Parameters__c.field-meta.xml
<CustomField>
    <fullName>cnx__Additional_Search_Parameters__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>Defines parameters to pass to the opened search page or a custom Visualforce page page for inbound calls or to
        trigger a Lightning Flow.</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>