force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Additional_Search_Parameters_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Additional_Search_Parameters_v2__c</fullName>
    <description>Defines parameters to pass to the opened search page or a custom Visualforce page page for inbound calls or to trigger a Lightning Flow.</description>
    <inlineHelpText>Defines parameters to pass to the opened search page or a custom Visualforce page page for inbound calls or to
        trigger a Lightning Flow.</inlineHelpText>
    <label>Additional Search Parameters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>