force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Agent_Media_Profile__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Media_Profile__c</fullName>
    <defaultValue>&quot;sfdc_external_routing&quot;</defaultValue>
    <description>Selects the Agent Adapter Media Profile.</description>
    <inlineHelpText>Selects the Agent Adapter Media Profile.</inlineHelpText>
    <label>Agent Media Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>