force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Agent_Work_Layout__c.field-meta.xml
<CustomField>
    <fullName>cnx__Agent_Work_Layout__c</fullName>
    <defaultValue>&quot;[{\&quot;key\&quot;:\&quot;Case\&quot;,\&quot;value\&quot;:\&quot;Subject,Priority,Status,CaseNumber\&quot;},{\&quot;key\&quot;:\&quot;LiveChatTranscript\&quot;,\&quot;value\&quot;:\&quot;Name,LiveChatButton.MasterLabel,LiveChatDeployment.MasterLabel,IpAddress\&quot;}]&quot;</defaultValue>
    <description>Configuration of Agent Work Layout.</description>
    <inlineHelpText>Configuration of Agent Work Layout.</inlineHelpText>
    <label>Agent Work Layout</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>