force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Allow_Agents_to_Decline_Requests__c.field-meta.xml
<CustomField>
    <fullName>cnx__Allow_Agents_to_Decline_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>If set to true, a decline button will be displayed on the items, allowing the agent to decline the request.</inlineHelpText>
    <label>deprecated</label>
    <type>Checkbox</type>
</CustomField>