force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Allow_Dropping_Of_All_Participants__c.field-meta.xml
<CustomField>
    <fullName>cnx__Allow_Dropping_Of_All_Participants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Dropping Of All Participants</label>
    <type>Checkbox</type>
</CustomField>