force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Call_Item_Height__c.field-meta.xml
<CustomField>
    <fullName>cnx__Call_Item_Height__c</fullName>
    <defaultValue>300</defaultValue>
    <description>Defines the height of the call items on the UI.</description>
    <inlineHelpText>Defines the height of the call items on the UI.</inlineHelpText>
    <label>Call Item Height (px)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>