force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Call_Layout__c.field-meta.xml
<CustomField>
    <fullName>cnx__Call_Layout__c</fullName>
    <description>When the call item content exceeds the configured call item height, the content of the call item will be scrollable. When activating one of the checkboxes the selected part of the call item will always be fully visible.</description>
    <inlineHelpText>When the call item content exceeds the configured call item height, the content of the call item will be scrollable.
When activating one of the checkboxes the selected part of the call item will always be fully visible.</inlineHelpText>
    <label>Call Item Behavior</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>StickyActivity</fullName>
                <label>Make Call Activity Section Sticky</label>
            </value>
            <value>
                <fullName>StickyNewRecord</fullName>
                <label>Make Create New Section Sticky</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>