force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Call_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>cnx__Call_Log_Type__c</fullName>
    <description>Selects the call log type.</description>
    <inlineHelpText>Selects the call log type.</inlineHelpText>
    <label>Call Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <label>No Call Log</label>
            </value>
            <value>
                <fullName>callActivityRecord</fullName>
                <default>true</default>
                <label>Call Activity Record</label>
            </value>
            <value>
                <fullName>salesforceInteractionLog</fullName>
                <label>Salesforce Interaction Log (Classic Only)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>