force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Call_Log_Variable_Mapping__c.field-meta.xml
<CustomField>
    <fullName>cnx__Call_Log_Variable_Mapping__c</fullName>
    <defaultValue>&quot;[{\&quot;key\&quot;:\&quot;Subject\&quot;,\&quot;value\&quot;:\&quot;Call {DATE:YYYY-MM-DD HH:mm:ss}\&quot;}]&quot;</defaultValue>
    <description>Call Log Variable Mapping.</description>
    <label>Call Log Variable Mapping</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>