force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Campaign_Account_Number_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Campaign_Account_Number_URL__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>Adds a reference to a campaign management tool.</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>