force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Campaign_Account_Number_URL_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Campaign_Account_Number_URL_v2__c</fullName>
    <description>Adds a reference to a campaign management tool.</description>
    <inlineHelpText>Adds a reference to a campaign management tool.</inlineHelpText>
    <label>Campaign Account Number URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>