force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Chats_To_Set_Voice_NR__c.field-meta.xml
<CustomField>
    <fullName>cnx__Chats_To_Set_Voice_NR__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of chats to set Voice channel to Not Ready.</description>
    <inlineHelpText>Number of chats to set Voice channel to Not Ready</inlineHelpText>
    <label>Chats To Set Voice Not Ready</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>