force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Cisco_Media_Routing_Domains__c.field-meta.xml
<CustomField>
    <fullName>cnx__Cisco_Media_Routing_Domains__c</fullName>
    <defaultValue>&quot;[]&quot;</defaultValue>
    <description>Configuration of one or two media channels.</description>
    <inlineHelpText>Configuration of one or two media channels</inlineHelpText>
    <label>Media Routing Domain Settings</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>