force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Copy_Call_Disposition_to_Wrap_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>cnx__Copy_Call_Disposition_to_Wrap_Up_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this setting is enabled, the call disposition for Sales Engagement items will be copied to the Wrap-Up field of the Cisco task.</description>
    <inlineHelpText>If this setting is enabled, the call disposition for Sales Engagement items will be copied to the Wrap-Up field of the Cisco task.</inlineHelpText>
    <label>Copy Call Disposition to Wrap-Up Reason</label>
    <type>Checkbox</type>
</CustomField>