force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Count_Offered_Chats_to_Set_Voice_NR__c.field-meta.xml
<CustomField>
    <fullName>cnx__Count_Offered_Chats_to_Set_Voice_NR__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Count Offered Chats to Set Voice Not Ready</description>
    <inlineHelpText>If set to true offered chats will be considered for the “Chats to set voice Not Ready“ limit.</inlineHelpText>
    <label>Count Offered Chats to Set Voice NR</label>
    <type>Checkbox</type>
</CustomField>