force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Default_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>cnx__Default_Call_Disposition__c</fullName>
    <description>Default Call Disposition.</description>
    <label>Default Call Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>