force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>cnx__Deployment_Type__c</fullName>
    <description>Selects the deployment type.</description>
    <inlineHelpText>Selects the deployment type.</inlineHelpText>
    <label>Deployment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-voice</fullName>
                <default>true</default>
                <label>Voice-Only</label>
            </value>
            <value>
                <fullName>2-omni</fullName>
                <label>Salesforce Omni-Channel</label>
            </value>
            <value>
                <fullName>12-media</fullName>
                <label>Cisco Universal Queue</label>
            </value>
            <value>
                <fullName>1024-small</fullName>
                <label>Small</label>
            </value>
            <value>
                <fullName>mcal</fullName>
                <isActive>false</isActive>
                <label>mcal</label>
            </value>
            <value>
                <fullName>media</fullName>
                <isActive>false</isActive>
                <label>media</label>
            </value>
            <value>
                <fullName>mri</fullName>
                <isActive>false</isActive>
                <label>mri</label>
            </value>
            <value>
                <fullName>omni</fullName>
                <isActive>false</isActive>
                <label>omni</label>
            </value>
            <value>
                <fullName>voice</fullName>
                <isActive>false</isActive>
                <label>voice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>