force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Dialing_Rules__c.field-meta.xml
<CustomField>
    <fullName>cnx__Dialing_Rules__c</fullName>
    <description>Dialing rules convert phone numbers stored in Salesforce to a dialable format.</description>
    <inlineHelpText>Dialing rules convert phone numbers stored in Salesforce to a dialable format.</inlineHelpText>
    <label>Dialing Rules</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>