force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Disabled_Media_Actions__c.field-meta.xml
<CustomField>
    <fullName>cnx__Disabled_Media_Actions__c</fullName>
    <description>Disabled Actions disable specific action buttons.</description>
    <inlineHelpText>Disabled Actions disable specific action buttons.</inlineHelpText>
    <label>Disabled Media Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chat_ItemReject</fullName>
                <label>Chat Item Reject</label>
            </value>
            <value>
                <fullName>Ticket_ItemReject</fullName>
                <label>Ticket Item Reject</label>
            </value>
            <value>
                <fullName>TaskScreenPop</fullName>
                <label>Task Screen Pop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>