force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Disabled_Voice_Actions__c.field-meta.xml
<CustomField>
    <fullName>cnx__Disabled_Voice_Actions__c</fullName>
    <description>Disabled Actions disable specific action buttons.</description>
    <inlineHelpText>Disabled Actions disable specific action buttons.</inlineHelpText>
    <label>Disabled Voice Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ClickToDial</fullName>
                <label>Click To Dial</label>
            </value>
            <value>
                <fullName>Close</fullName>
                <label>Close Preview Outbound Call</label>
            </value>
            <value>
                <fullName>Conference</fullName>
                <label>Conference Call</label>
            </value>
            <value>
                <fullName>Dialpad</fullName>
            </value>
            <value>
                <fullName>EndCallOnHold</fullName>
                <label>End Call On Hold</label>
            </value>
            <value>
                <fullName>Reject</fullName>
                <label>Reject Preview Outbound Call</label>
            </value>
            <value>
                <fullName>Transfer_SST</fullName>
                <label>Single Step Transfer</label>
            </value>
            <value>
                <fullName>SpeedDial</fullName>
                <label>Speed Dial Buttons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>