force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Display_Team_Messages__c.field-meta.xml
<CustomField>
    <fullName>cnx__Display_Team_Messages__c</fullName>
    <description>Display Team Messages feature. Only available in Finesse 12.0 or above.</description>
    <inlineHelpText>Only available in Finesse 12.0 or above.</inlineHelpText>
    <label>Display Team Messages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <default>true</default>
                <label>Never</label>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>On message received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>