force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Edit_Number_On_Click_to_Dial__c.field-meta.xml
<CustomField>
    <fullName>cnx__Edit_Number_On_Click_to_Dial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opens the number in the Make Call bar instead of calling directly.</description>
    <inlineHelpText>Opens the number in the Make Call bar instead of calling directly.</inlineHelpText>
    <label>Edit Number On Click-to-Dial</label>
    <type>Checkbox</type>
</CustomField>