force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Enable_HTML5_Desktop_Notifications__c.field-meta.xml
<CustomField>
    <fullName>cnx__Enable_HTML5_Desktop_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, for each incoming call or case a desktop notification is displayed in the lower right corner of the (primary) screen.</description>
    <inlineHelpText>If set to true, for each incoming call or case a desktop notification is displayed in the lower right corner of
        the (primary) screen.</inlineHelpText>
    <label>Enable HTML5 Desktop Notifications</label>
    <type>Checkbox</type>
</CustomField>