force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Enable_Integration_API_in_Lightning__c.field-meta.xml
<CustomField>
    <fullName>cnx__Enable_Integration_API_in_Lightning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to Yes, the Connects Integration API sends events and listens for requests on the Connects Lightning Message Channel. Keep this setting on No if you do not use any integrations in Salesforce Lightning to reduce browser workload.</description>
    <inlineHelpText>If set to Yes, the Connects Integration API sends events and listens for requests on the Connects Lightning Message Channel. Keep this setting on No if you do not use any integrations in Salesforce Lightning to reduce browser workload.</inlineHelpText>
    <label>Enable Integration API in Lightning</label>
    <type>Checkbox</type>
</CustomField>