force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Enable_Issue_Report__c.field-meta.xml
<CustomField>
    <fullName>cnx__Enable_Issue_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Send Report Issue item will be shown in agent&apos;s Softphone Settings menu.</description>
    <inlineHelpText>If checked, the Send Report Issue item will be shown in agent&apos;s Softphone Settings menu.</inlineHelpText>
    <label>Enable Issue Report</label>
    <type>Checkbox</type>
</CustomField>