force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Enable_Mobile_Agent_Support__c.field-meta.xml
<CustomField>
    <fullName>cnx__Enable_Mobile_Agent_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Cisco Mobile Agent support.</description>
    <inlineHelpText>Enables the Cisco Mobile Agent support.</inlineHelpText>
    <label>Enable Mobile Agent Support</label>
    <type>Checkbox</type>
</CustomField>