force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Enable_Redial_Button__c.field-meta.xml
<CustomField>
    <fullName>cnx__Enable_Redial_Button__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate this setting to enable the redial Button in b+s Connects for Salesforce.</description>
    <inlineHelpText>Activate this setting to enable the redial Button in b+s Connects for Salesforce.</inlineHelpText>
    <label>Enable Redial Button</label>
    <type>Checkbox</type>
</CustomField>