force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__End_Media_Task_From_Gadget__c.field-meta.xml
<CustomField>
    <fullName>cnx__End_Media_Task_From_Gadget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to yes, Media tasks like Cases and Tickets can be ended from the Gadget insted of closing the Tab</description>
    <inlineHelpText>If set to yes, Media tasks like Cases and Tickets can be ended from the Gadget insted of closing the Tab</inlineHelpText>
    <label>End Media Task From Gadget</label>
    <type>Checkbox</type>
</CustomField>