force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Finesse_Server_Timeout__c.field-meta.xml
<CustomField>
    <fullName>cnx__Finesse_Server_Timeout__c</fullName>
    <defaultValue>60000</defaultValue>
    <description>This field is required if Finesse URL B is set. Input is in milliseconds. Max length 8 digits.</description>
    <inlineHelpText>This field is required if Finesse URL B is set. Input is in milliseconds. Max length 8 digits.</inlineHelpText>
    <label>Finesse Server Timeout</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>