force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Finesse_SSO_Frame_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Finesse_SSO_Frame_URL__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>Relative path to the Finesse SSO Frame</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>