force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Finesse_URL_B__c.field-meta.xml
<CustomField>
    <fullName>cnx__Finesse_URL_B__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>URL like https://myFinesseServerB.myDomain</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>