force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Finesse_URL_B_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Finesse_URL_B_v2__c</fullName>
    <defaultValue>&apos;https://myFinesseServerB.myDomain&apos;</defaultValue>
    <description>Finesse Server B URL.</description>
    <inlineHelpText>Finesse Server B URL (e.g. https://myFinesseServerB.myDomain)</inlineHelpText>
    <label>Finesse URL B</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>