force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Flags__c.field-meta.xml
<CustomField>
    <fullName>cnx__Flags__c</fullName>
    <description>Enable special features, which are not part of the normal gadget behavior.</description>
    <inlineHelpText>Enable special features, which are not part of the normal gadget behavior.</inlineHelpText>
    <label>Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>