force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Force_Mobile_Agent_Connection__c.field-meta.xml
<CustomField>
    <fullName>cnx__Force_Mobile_Agent_Connection__c</fullName>
    <description>Force &apos;Nailed Connection&apos; (N) or &apos;Call-By-Call&apos; (C).</description>
    <inlineHelpText>Choses the Mobile Agent mode.</inlineHelpText>
    <label>Force Mobile Agent Connection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGENT_CHOOSES</fullName>
                <default>true</default>
                <label>Agent chooses</label>
            </value>
            <value>
                <fullName>NAILED_CONNECTION</fullName>
                <label>Nailed Connection</label>
            </value>
            <value>
                <fullName>CALL_BY_CALL</fullName>
                <label>Call By Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>