force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Format_Rule_Lookup_RegEx__c.field-meta.xml
<CustomField>
    <fullName>cnx__Format_Rule_Lookup_RegEx__c</fullName>
    <defaultValue>&quot;/^[^+0-9]|(?&lt;=.)[^0-9]/g&quot;</defaultValue>
    <description>Regex string that defines the replacement rules to be applied to lookup searches.</description>
    <inlineHelpText>Regex string that defines the replacement rules to be applied to lookup searches.</inlineHelpText>
    <label>Format Rule (Lookup) RegEx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>