force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Format_Rule_RegEx__c.field-meta.xml
<CustomField>
    <fullName>cnx__Format_Rule_RegEx__c</fullName>
    <defaultValue>&quot;/\\(\\s*0\\s*\\)|^[^+0-9*#]|(?&lt;=.)[^0-9*#]/g&quot;</defaultValue>
    <description>Regex string that defines the replacement rules for outbound calls.</description>
    <inlineHelpText>Regex string that defines the replacement rules for outbound calls.</inlineHelpText>
    <label>Format Rule RegEx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>