force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Hide_Chat_After_Accepting__c.field-meta.xml
<CustomField>
    <fullName>cnx__Hide_Chat_After_Accepting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>If set to true the SFDC Chat items displayed in the gadget will hide when accepted.</inlineHelpText>
    <label>deprecated</label>
    <type>Checkbox</type>
</CustomField>