force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Hide_Omni_Channel_Work_Item__c.field-meta.xml
<CustomField>
    <fullName>cnx__Hide_Omni_Channel_Work_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide Omni-Channel Work Item After Accepting.</description>
    <inlineHelpText>If set to true the SFDC Omni-Channel items displayed in the gadget will hide when accepted.</inlineHelpText>
    <label>Hide Omni-Channel Work Item</label>
    <type>Checkbox</type>
</CustomField>