force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Integration_Settings__c.field-meta.xml
<CustomField>
    <fullName>cnx__Integration_Settings__c</fullName>
    <defaultValue>&quot;[]&quot;</defaultValue>
    <description>Defines settings for integrations.</description>
    <inlineHelpText>Defines settings for integrations</inlineHelpText>
    <label>Integration Settings</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>