force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Internal_Number_Format_RegEx__c.field-meta.xml
<CustomField>
    <fullName>cnx__Internal_Number_Format_RegEx__c</fullName>
    <description>Defines the format for internal numbers.</description>
    <inlineHelpText>Defines the format for internal numbers.</inlineHelpText>
    <label>Internal Number Format RegEx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>