force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>cnx__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets b+s Configuration as default.</description>
    <inlineHelpText>Sets b+s Configuration as default.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>