force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Issue_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Issue_Report_URL__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>Specifies an URL that is executed after the agent uploads log files to the Finesse server to report an issue.</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>