force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Issue_Report_URL_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Issue_Report_URL_v2__c</fullName>
    <defaultValue>&quot;mailto:support@mycompany.com?subject=Connects issue report&amp;body={message}&quot;</defaultValue>
    <description>Specifies an URL that is executed after the agent uploads log files to the Finesse server to report an issue.</description>
    <inlineHelpText>Specifies an URL that is executed after the agent uploads log files to the Finesse server to report an issue.</inlineHelpText>
    <label>Issue Report URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>