force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__LastModifiedUnixTime__c.field-meta.xml
<CustomField>
    <fullName>cnx__LastModifiedUnixTime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LastModifiedUnixTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>