force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Lookup_Rules__c.field-meta.xml
<CustomField>
    <fullName>cnx__Lookup_Rules__c</fullName>
    <description>Used to match customer phone numbers to CRM records.</description>
    <inlineHelpText>Used to match customer phone numbers to CRM records.</inlineHelpText>
    <label>Lookup Rules</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>