force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Max_Directory_Lookup_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>cnx__Max_Directory_Lookup_Suggestions__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Max Number of Directory Lookup Suggestions.</description>
    <inlineHelpText>Specifies the max number of lookup entries shown in the MakeCall dialog.</inlineHelpText>
    <label>Max Directory Lookup Suggestions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>