force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Max_Number_of_CRM_Lookup_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>cnx__Max_Number_of_CRM_Lookup_Suggestions__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Specifies the max number of lookup entries shown on the call work item.</description>
    <inlineHelpText>Specifies the max number of lookup entries shown on the call work item.</inlineHelpText>
    <label>Max Number of CRM Lookup Suggestions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>