force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Media_Additional_Search_Parameters__c.field-meta.xml
<CustomField>
    <fullName>cnx__Media_Additional_Search_Parameters__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <inlineHelpText>Reused key to integrate Lightning Flows in Search and Screen pop</inlineHelpText>
    <label>deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>