force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Media_Additional_Search_Parameters_v2__c.field-meta.xml
<CustomField>
    <fullName>cnx__Media_Additional_Search_Parameters_v2__c</fullName>
    <description>Reused key to integrate Lightning Flows in Search and Screen pop.</description>
    <inlineHelpText>Reused key to integrate Lightning Flows in Search and Screen pop.</inlineHelpText>
    <label>Additional Search Parameters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>