force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Media_Search_and_Screen_Pop_Variable__c.field-meta.xml
<CustomField>
    <fullName>cnx__Media_Search_and_Screen_Pop_Variable__c</fullName>
    <description>Defines the expression that is searched for in the Salesforce database on tasks.</description>
    <inlineHelpText>Defines the expression that is searched for in the Salesforce database on tasks.</inlineHelpText>
    <label>Search and Screen Pop Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>