force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Media_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>cnx__Media_Service_URL__c</fullName>
    <defaultValue>&quot;https://myConnectsMediaServer:8090/connects/&quot;</defaultValue>
    <description>URL to the Agent Adapter web service.</description>
    <inlineHelpText>URL to the Agent Adapter web service</inlineHelpText>
    <label>Media Service URL</label>
    <type>Url</type>
</CustomField>