force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Not_Ready_Reason_Code_While_Chat__c.field-meta.xml
<CustomField>
    <fullName>cnx__Not_Ready_Reason_Code_While_Chat__c</fullName>
    <defaultValue>&quot;ReasonCode&quot;</defaultValue>
    <description>Specifies the Not Ready Reason Code which will be set in Voice channel if the chat limit is reached.</description>
    <inlineHelpText>Specifies the Not Ready Reason Code which will be set in Voice channel if the chat limit is reached.</inlineHelpText>
    <label>Not Ready Reason Code While Chat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>