force-app/main/default/objects/cnx__Connects_Configuration__c/fields/cnx__Not_Ready_Threshold__c.field-meta.xml
<CustomField>
    <fullName>cnx__Not_Ready_Threshold__c</fullName>
    <description>Channels that are “Not Ready” change the color when the agent stays in a Not Ready state for more than the given amount of seconds. Leave empty to disable this feature.</description>
    <inlineHelpText>Channels that are “Not Ready” change the color when the agent stays in a Not Ready state for more than the given amount of seconds. Leave empty to disable this feature.</inlineHelpText>
    <label>Not Ready Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>